X device - fix compiler 'warning'

Bug #707502 "- -Wincompatible-pointer-types warning in devices/gdevxini.c"

This is probably an oversight from when we changed a load of variables
to size_t.

Seems odd that compilers (well gcc) should refuse to compile becuase of
a warning, but that's compilers. The pointer type is incorrect so let's
fix it.